<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessDeniedLocalStorageSubTitle">Without permission to access your photos we cannot continue.</string>
    <string name="accessDeniedLocalStorageTitle">Access denied</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="action_close">Close</string>
    <string name="action_go_back">Go Back</string>
    <string name="action_go_forward">Go Forward</string>
    <string name="action_reload">Reload</string>
    <string name="action_share">Share</string>
    <string name="allowAccessLocalStorageSubTitle">In order for us to proceed with the process, please enable access to your photos.</string>
    <string name="allowAccessLocalStorageTitle">Allow access</string>
    <string name="android_caf">Android</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Nação BRB FLA</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attempting_to_connect">Attempting to connect...</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="ca_mas_account_name">br.com.brb.ca-mas-account</string>
    <string name="camera_helper_error_caf">Unable to start the camera</string>
    <string name="camera_helper_no_camera_exception">No available camera can be found</string>
    <string name="cancel_Caf">Cancel</string>
    <string name="capture_processing_error_message">Ops, we had a problem processing the picture. Please try again</string>
    <string name="certificate_invalid_caf">Invalid certificate</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_caf">Check</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="client_already_connected">Already connected</string>
    <string name="client_already_disconnected">Already disconnected</string>
    <string name="close_caf">Close</string>
    <string name="cnh_back_caf">CNH Back</string>
    <string name="cnh_back_wrong_caf">"Ops, this is the CNH's Back"</string>
    <string name="cnh_front_caf">CNH Front</string>
    <string name="cnh_front_wrong_caf">"Ops, this is the CNH's Front"</string>
    <string name="cnh_full_caf">CNH</string>
    <string name="cnh_full_wrong_caf">Ops, this is the CNH Opened</string>
    <string name="com.crashlytics.android.build_id">3831c2e5-68ad-4ad5-a4a4-15ed2f462d57</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_error">Connection Error in Client.</string>
    <string name="connected">CONNECTED</string>
    <string name="connection_attempt">"Attempting to connect with URL '%s'"</string>
    <string name="connection_lost">Connection was lost</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="could_not_connect">Could not connect to the message broker</string>
    <string name="could_not_disconnect">Could not disconnect from the message broker</string>
    <string name="could_not_publish">Could not publish the message</string>
    <string name="could_not_subscribe">"Could not subscribe to the topic '%s'."</string>
    <string name="could_not_unsubscribe">"Could not unsubscribe from the topic '%s'."</string>
    <string name="crlv_caf">CRLV</string>
    <string name="crlv_wrong_caf">Ops, this is the CRLV</string>
    <string name="ctps_back_caf">CTPS Back</string>
    <string name="ctps_back_caf_wrong_caf">"Ops, this is the CTPS's Back"</string>
    <string name="ctps_caf">CPTS</string>
    <string name="ctps_front_caf">CTPS Front</string>
    <string name="ctps_front_caf_wrong_caf">"Ops, this is the CTPS's Front"</string>
    <string name="custom_url_scheme">nacaobrbfla</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="default_web_client_id">959902445081-k5ikevmn76aktj3rj4sjrcf3d1c54k0h.apps.googleusercontent.com</string>
    <string name="delivery_failed">Delivery failed</string>
    <string name="delivery_succeeded">Delivery succeeded</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="documentOpen">Close your document and try again</string>
    <string name="document_caf">document</string>
    <string name="document_detector_steps">Document</string>
    <string name="document_not_found_caf">"Didn't found a document"</string>
    <string name="document_subtitle">Dispose the document in a desk, centralize it on the markup and hold the automatic capture.</string>
    <string name="doing_facematch_caf">Comparing face…</string>
    <string name="error_000_message">Error 000</string>
    <string name="error_100_message">Error 100</string>
    <string name="error_200_message">Error 200</string>
    <string name="error_300_message">Error 300</string>
    <string name="error_400_message">Error 400</string>
    <string name="error_500_message">Error 500</string>
    <string name="error_600_message">Error 600</string>
    <string name="error_700">Error 700</string>
    <string name="error_700_message">Unable to perform this action. Please contact support.</string>
    <string name="error_800_message">Parece que ocorreu algum erro. Entre em contato com o suporte</string>
    <string name="error_900_message">Error 900</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="eyes_closed">"Don't wear sunglasses and keep your eyes open"</string>
    <string name="eyes_closed_caf">"Don't wear sunglasses and keep your eyes open"</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="face_authenticator_file_caf">authentication</string>
    <string name="face_not_found_caf">"Didn't find a face"</string>
    <string name="face_register_caf">Face Register</string>
    <string name="face_too_close_caf">Turn away your face</string>
    <string name="face_too_far_caf">Bring your face closer</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="fingerprint_dialog_touch_sensor">Touch the fingerprint sensor</string>
    <string name="fingerprint_error_hw_not_available">Fingerprint hardware not available.</string>
    <string name="fingerprint_error_hw_not_present">This device does not have a fingerprint sensor</string>
    <string name="fingerprint_error_lockout">Too many attempts. Please try again later.</string>
    <string name="fingerprint_error_no_fingerprints">No fingerprints enrolled.</string>
    <string name="fingerprint_error_user_canceled">Fingerprint operation canceled by user.</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
    <string name="nothing_caf">Nothing</string>
    <string name="ok_understood">OK, understood</string>
    <string name="photo_mask_caf">Photo Mask</string>
    <string name="preview_accept">Yes, it looks ok!</string>
    <string name="preview_subtitle">Check if all informations are readable and without obstruction</string>
    <string name="preview_title">The picture looks ok?</string>
    <string name="preview_try_again">Try again</string>
    <string name="switch_camera">Switch camera</string>
    <string name="take_picture">Take Picture</string>
    <string name="uploadPopupSubtitle">Upload your document to continue</string>
    <string name="uploadPopupTitle">Upload file</string>
</resources>