<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/activity_passive_face_liveness_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineStart" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineEnd" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.9" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineTop" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.7" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.97" />
    <androidx.camera.view.PreviewView android:id="@id/cameraImageView" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ImageView android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ImageView android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitXY" android:adjustViewBounds="true" android:contentDescription="@string/photo_mask_caf" />
    <ImageView android:tag="binding_4" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back_caf" android:adjustViewBounds="true" android:contentDescription="@string/close_caf" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toTopOf="@id/guidelineTop" />
    <ImageView android:tag="binding_5" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_camera_switch" android:adjustViewBounds="true" android:contentDescription="@string/switch_camera" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintTop_toTopOf="@id/guidelineTop" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:contentDescription="@string/take_picture" app:backgroundTint="?colorPrimary" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toTopOf="@id/guidelineStatus" app:srcCompat="@drawable/ic_camera_caf" app:tint="#ffffffff" />
    <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_7" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toTopOf="@id/guidelineStatus">
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="#ff606060" android:gravity="center_horizontal" android:id="@id/statusMessage" android:tag="binding_8" android:background="@drawable/bg_radius_caf" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:lineSpacingExtra="7.0sp" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:background="@drawable/triangle_caf" android:layout_width="wrap_content" android:layout_height="wrap_content" android:adjustViewBounds="true" android:contentDescription="@string/nothing_caf" android:rotation="270.0" app:layout_constraintBottom_toTopOf="@id/statusMessage" app:layout_constraintEnd_toEndOf="@id/statusMessage" app:layout_constraintStart_toStartOf="@id/statusMessage" app:layout_constraintTop_toTopOf="@id/statusMessage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/tvCurrentStepName" android:tag="binding_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:letterSpacing="0.06" app:layout_constraintBottom_toTopOf="@id/tvPreviousStepName" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" />
    <ImageView android:tag="binding_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_check_caf" android:adjustViewBounds="true" android:contentDescription="@string/check_caf" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/tvCurrentStepName" app:layout_constraintEnd_toStartOf="@id/tvCurrentStepName" app:layout_constraintTop_toTopOf="@id/tvCurrentStepName" />
    <TextView android:textSize="16.0sp" android:textColor="#66ffffff" android:gravity="center_horizontal" android:id="@id/tvPreviousStepName" android:tag="binding_11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:letterSpacing="0.06" app:layout_constraintBottom_toBottomOf="@id/guidelineBottom" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" />
    <ImageView android:tag="binding_12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_check_caf" android:adjustViewBounds="true" android:contentDescription="@string/check_caf" android:alpha="0.4" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/tvPreviousStepName" app:layout_constraintEnd_toStartOf="@id/tvPreviousStepName" app:layout_constraintTop_toTopOf="@id/tvPreviousStepName" />
    <ProgressBar android:id="@id/progressBar" android:tag="binding_13" android:layout_width="64.0dip" android:layout_height="64.0dip" android:indeterminate="true" android:indeterminateTint="?colorPrimary" android:indeterminateTintMode="src_atop" app:layout_constraintBottom_toBottomOf="@id/guidelineBottom" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toTopOf="@id/guidelineTop" app:layout_constraintVertical_bias="0.45" />
</androidx.constraintlayout.widget.ConstraintLayout>