<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/popup_rounded_corner_caf" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineStart" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineEnd" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.9" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineTop" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.95" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineStartDocument" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.25" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineEndDocument" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.75" />
    <ImageView android:id="@id/ivDocument" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:adjustViewBounds="true" android:contentDescription="@string/document_detector_steps" app:layout_constraintEnd_toEndOf="@id/guidelineEndDocument" app:layout_constraintStart_toStartOf="@id/guidelineStartDocument" app:layout_constraintTop_toTopOf="@id/guidelineTop" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff202020" android:gravity="center_horizontal" android:id="@id/tvUploadDocumentTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_marginBottom="7.0dip" android:fontFamily="@font/open_sans" android:letterSpacing="0.06" app:layout_constraintBottom_toTopOf="@id/tvUploadDocumentSubTitle" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toBottomOf="@id/ivDocument" />
    <TextView android:textSize="16.0sp" android:textColor="#ff202020" android:gravity="center_horizontal" android:id="@id/tvUploadDocumentSubTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/uploadPopupSubtitle" android:lineSpacingExtra="5.0sp" android:fontFamily="@font/open_sans" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toBottomOf="@id/tvUploadDocumentTitle" />
    <com.google.android.material.button.MaterialButton android:textSize="14.0sp" android:textStyle="bold" android:id="@id/bUpload" android:padding="5.0dip" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/uploadPopupTitle" android:onClick="uploadDocument" android:fontFamily="@font/open_sans" app:backgroundTint="?colorPrimary" app:cornerRadius="20.0dip" app:layout_constraintBottom_toBottomOf="@id/bCancel" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toBottomOf="@id/tvUploadDocumentSubTitle" app:layout_constraintVertical_bias="0.0" style="@style/defaultButtonStyle" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="?colorPrimary" android:gravity="center_horizontal" android:id="@id/bCancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/cancel_Caf" android:onClick="cancelPopupUpload" android:fontFamily="@font/open_sans" app:cornerRadius="20.0dip" app:layout_constraintBottom_toBottomOf="@id/guidelineBottom" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toBottomOf="@id/bUpload" />
</androidx.constraintlayout.widget.ConstraintLayout>