<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/activity_preview_document_detector_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineStart" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.2" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineStart2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineEnd" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.9" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineEnd2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.8" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineTop" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineTop2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.59" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.9" />
    <ImageView android:id="@id/photoImageView" android:layout_width="0.0dip" android:layout_height="0.0dip" android:adjustViewBounds="true" android:maxHeight="480.0dip" android:foregroundGravity="center" app:layout_constraintBottom_toTopOf="@id/guidelineTop2" app:layout_constraintEnd_toStartOf="@id/guidelineEnd2" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toTopOf="@id/guidelineTop" app:layout_constraintVertical_chainStyle="packed" />
    <TextView android:textSize="25.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/tvTitle" android:layout_width="247.0dip" android:layout_height="wrap_content" android:text="@string/preview_title" android:lineSpacingExtra="10.0sp" android:fontFamily="" app:layout_constraintBottom_toTopOf="@id/tvSubTitle" app:layout_constraintEnd_toStartOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart2" app:layout_constraintTop_toTopOf="@id/guidelineTop2" app:layout_constraintVertical_bias="0.0" app:layout_constraintWidth_percent="0.6" style="@style/textPreview" />
    <TextView android:textSize="17.0sp" android:textStyle="normal" android:gravity="center" android:id="@id/tvSubTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/preview_subtitle" android:lineSpacingExtra="10.0sp" android:textAlignment="center" app:layout_constraintBottom_toTopOf="@id/acceptButton" app:layout_constraintEnd_toStartOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart2" app:layout_constraintTop_toBottomOf="@id/tvTitle" app:layout_constraintWidth_percent="0.9" style="@style/textPreview" />
    <com.google.android.material.button.MaterialButton android:textSize="17.0sp" android:gravity="center" android:id="@id/acceptButton" android:text="@string/preview_accept" app:cornerRadius="20.0dip" app:layout_constraintBottom_toTopOf="@id/bTryAgain" app:layout_constraintEnd_toStartOf="@id/guidelineEnd" app:layout_constraintHorizontal_bias="0.495" app:layout_constraintStart_toStartOf="@id/guidelineStart2" app:layout_constraintTop_toBottomOf="@id/tvSubTitle" app:layout_constraintWidth_percent="0.5" style="@style/defaultButtonStyle" />
    <com.google.android.material.button.MaterialButton android:id="@id/bTryAgain" android:text="@string/preview_try_again" app:layout_constraintBottom_toTopOf="@id/guidelineBottom" app:layout_constraintEnd_toStartOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart2" app:layout_constraintTop_toBottomOf="@id/acceptButton" app:layout_constraintWidth_percent="0.5" style="@style/transparentButton" />
</androidx.constraintlayout.widget.ConstraintLayout>