<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/popup_rounded_corner_caf" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineStart" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineEnd" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.9" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineTop" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guidelineBottom" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.95" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineStartDocument" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.25" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineEndDocument" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.75" />
    <ImageView android:id="@id/ivDocument" android:layout_width="0.0dip" android:layout_height="wrap_content" android:adjustViewBounds="true" android:contentDescription="@string/document_detector_steps" app:layout_constraintEnd_toEndOf="@id/guidelineEndDocument" app:layout_constraintStart_toStartOf="@id/guidelineStartDocument" app:layout_constraintTop_toTopOf="@id/guidelineTop" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff323232" android:gravity="center_horizontal" android:id="@id/tvDocumentTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:letterSpacing="0.06" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toBottomOf="@id/ivDocument" />
    <TextView android:textSize="15.0sp" android:textColor="#ff606060" android:gravity="center_horizontal" android:id="@id/tvDocumentSubtitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/document_subtitle" android:lineSpacingExtra="5.0sp" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toBottomOf="@id/tvDocumentTitle" />
    <com.google.android.material.button.MaterialButton android:textSize="18.0sp" android:textStyle="normal" android:id="@id/bOK" android:layout_marginTop="25.0dip" android:text="@string/ok_understood" app:cornerRadius="20.0dip" app:layout_constraintBottom_toBottomOf="@id/guidelineBottom" app:layout_constraintEnd_toEndOf="@id/guidelineEnd" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toBottomOf="@id/tvDocumentSubtitle" style="@style/defaultButtonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>